--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.8'
+version: "3.8"
 services:
   secure-auth:
     build: .
     ports:
-      - "8081:8080"
+      - "8080:8080"
     volumes:
       - ./data:/data
       - ./cron:/cron
